First draft - moving from guitare to GS

--- a/ui/templates/head.html
+++ b/ui/templates/head.html
@@ -15,7 +15,7 @@
     <script src="{{ url_for('static', filename='js/dataTables.checkboxes.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/overhang.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/guitar.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/gs.js') }}"></script>
     {% endblock %}
 
     {% block stylesheets %}
@@ -24,6 +24,6 @@
     <link href="{{ url_for('static', filename='css/dataTables.checkboxes.css') }}" rel="stylesheet" />
     <link href="{{ url_for('static', filename='css/navbar.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/overhang.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/guitar.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/gs.css') }}" rel="stylesheet">
     {% endblock %}
 </head>
