--- a/ui/templates/gslist.html
+++ b/ui/templates/gslist.html
@@ -1,4 +1,4 @@
-<table id="guitars" cellspacing="0" width="100%" class="table table-striped table-bordered table-hover">
+<table id="gs" cellspacing="0" width="100%" class="table table-striped table-bordered table-hover">
         <thead class="thead-inverse">
             <tr>
                 <th>Brand</th>
