--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-<div id="guitars"></div><p><p>
+<div id="GameServers"></div><p><p>
 
-<a href="{{ url_for('guitarform') }}">add a new guitar!</a>
+<a href="{{ url_for('gsform') }}">Add a new gameserver!</a>
 <script>
-$(document).ready(guitarlist);
+$(document).ready(gslist);
 </script>
 {% endblock %}
